--- a/src/CSS/homepage.css
+++ b/src/CSS/homepage.css
@@ -36,3 +36,30 @@ header h1 {
     object-fit: cover; 
 }
 
+.settings {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%; 
+    margin: auto;
+    margin-left: 100px;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+.settings img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+}
+
+/* Hover effect */
+.settings:hover {
+    transform: scale(1.1); /* Slightly increase size */
+    opacity: 0.8; /* Change opacity on hover */
+}
+
+
+.username {
+    font-size: 16px;
+    color: #ffffff;
+    margin-right: 100px;
+}
