#16 Style registration form components including box, title, inputs, and buttons

--- a/src/CSS/register.css
+++ b/src/CSS/register.css
@@ -22,3 +22,61 @@ body {
     height: 100%;           
 }
 
+.box {
+    width: 50%; 
+    background-color: rgb(238, 238, 238);  
+    border-radius: 3%;
+    display: flex;            
+    justify-content: center; 
+    flex-direction: column; 
+    align-items: center;      
+    height: 70vh;            
+    margin: 0; 
+    color: black;
+   
+}
+
+.title {
+    color: black;
+    margin: 0; 
+    font-weight: 400;
+   padding: 40px;
+}
+
+.subtitle {
+    padding-bottom: 70px;
+    font-weight: 400;
+    color: black;
+
+}
+
+
+.input-field {
+    width: 380px;
+    height: 30px; 
+    padding: 10px; 
+    border: 1px solid #ccc; 
+    border-radius: 18px; 
+    font-size: 14px; 
+
+}
+
+
+.submit-button {
+    width: 400px; 
+    height: 50px; 
+    color: white;
+    border: none; 
+    border-radius: 18px; 
+    font-size: 16px;
+    background-color: #ebb112;
+    margin-bottom: 30px;
+
+}
+
+
+.register {
+color: rgb(49, 49, 49); 
+font-size: 14px;
+text-align: center;
+}
